--- a/.gitconfig
+++ b/.gitconfig
@@ -1,59 +1,62 @@
 [user]
-	name = Andrew Goodricke
-	email = github@andrewgoodricke.com
+  name = Andrew Goodricke
+  email = github@andrewgoodricke.com
 
 [color]
-	ui = auto
+  ui = auto
 
 [color "branch"]
-	current = yellow reverse
-	local = yellow
-	remote = green
+  current = yellow reverse
+  local = yellow
+  remote = green
 
 [color "diff"]
-	meta = yellow bold
-	frag = magenta bold
-	old = red bold
-	new = green bold
+  meta = yellow bold
+  frag = magenta bold
+  old = red bold
+  new = green bold
 
 [color "status"]
-	added = yellow
-	changed = green
-	untracked = cyan
+  added = yellow
+  changed = green
+  untracked = cyan
 
 [color]
-	ui = true
-	diff = auto
-	status = auto
-	branch = auto
-	interactive = auto
+  ui = true
+  diff = auto
+  status = auto
+  branch = auto
+  interactive = auto
 
 [color "diff"]
-	whitespace = red reverse
+  whitespace = red reverse
 
 [alias]
-	st = status
-	ci = commit
-	br = branch
-	co = checkout
-	df = diff
-	f = !git lfs fetch --recent && git fetch
-	pr = pull --rebase --prune
-	pt = !git push && git push --tags
-	save = !git add -A && git commit -m 'SAVEPOINT WIP'
-	undo = reset HEAD~1 --mixed
+  st = status
+  ci = commit
+  br = branch
+  co = checkout
+  df = diff
+  f = !git lfs fetch --recent && git fetch
+  fr = !git f && git pr
+  pr = pull --rebase --prune
+  pt = !git push && git push --tags
+  save = !git add -A && git commit -m 'SAVEPOINT WIP'
+  undo = reset HEAD~1 --mixed
+  dforigin=!git diff HEAD...origin
+  logorigin=!git log HEAD..origin
 
 [push]
-	default = simple
+  default = simple
 
 [diff]
     external = meld-git
 [merge]
-	tool = meld
+  tool = meld
 [commit]
-	template = /home/andrew/.gitmessage.txt
+  template = /home/andrew/.gitmessage.txt
 [filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
+  clean = git-lfs clean -- %f
+  smudge = git-lfs smudge -- %f
+  process = git-lfs filter-process
+  required = true
